Attempted fix for overflow with board fade

--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,7 @@ section#board{
 	width: 90vw;
 	height: 90vw;
 	position: absolute;
+	overflow: hidden;
 }
 @media (orientation: landscape){
 	section#board{
